# IHaveBeenHere

./: .gitignore  DEPLOYMENT.md  README.md
backend/: .dockerignore  .env.example  Dockerfile  auth.py  database.py  main.py  models.py  pyproject.toml  schemas.py
backend/meal_agent/: __init__.py  agent.py
backend/routers/: meals.py  restaurants.py  search.py
backend/services/: adk_runner.py  ai_service.py
backend/tools/: __init__.py  menu_detector.py  menu_identifier_grounded.py  restaurant_menu_searcher.py  review_generator.py
frontend/: .gitignore  CONTRIBUTING.md  LICENSE  SETUP.sh  app.config.ts  app.json  biome.json  eas.json  jest.config.ts  jest.env.rn.js  jest.setup.ts  metro.config.js  package-lock.json  package.json  tsconfig.json
frontend/.github/: PULL_REQUEST_TEMPLATE.md
frontend/.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
frontend/.github/workflows/: ci.yml
frontend/__tests__/: app.test.tsx
frontend/app/: +not-found.tsx  _layout.tsx
frontend/app/(tabs)/: _layout.tsx  camera.tsx  index.tsx  map.tsx  profile.tsx  search.tsx  settings.tsx
frontend/app/__tests__/: NotFoundScreen.test.tsx  RootLayout.test.tsx
frontend/app/auth/: login.tsx
frontend/app/log/: step1.tsx  step2.tsx  step3.tsx  step4.tsx
frontend/components/: Button.tsx  Card.tsx  MealCard.tsx  Screen.tsx  Text.tsx
frontend/constants/: index.ts
frontend/lib/: api.ts  env.ts  secureStorage.ts  supabase.ts  theme.ts
frontend/providers/: ThemeProvider.tsx
frontend/stores/: authStore.ts  exampleStore.ts  mealStore.ts  settingsStore.ts
(+15 files in other folders)
